add java formatter rules, fix formatting